# leibniz

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  version.h.in
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/mandelbrot/: fragment_shader.glsl  vertex_shader.glsl
src/: fractals.cpp  fractals.h  loader.h  main.cpp  shader_loader.h  window_title.h
