CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(leibniz)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_BUILD_TYPE DEBUG)

SET(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
SET(OpenGL_GL_PREFERENCE GLVND)

ADD_SUBDIRECTORY(/home/blake/glfw /home/blake/glfw/src)
ADD_SUBDIRECTORY(/home/blake/openal-soft /home/blake/openal-soft/include)

FIND_PACKAGE(OpenGL REQUIRED)

SET(SOURCE_FILES src/main.cpp)

ADD_EXECUTABLE(leibniz ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(leibniz glfw)
TARGET_LINK_LIBRARIES(leibniz OpenGL::GL)
TARGET_LINK_LIBRARIES(leibniz OpenAL::OpenAL)
